@@ -605,3 +605,4 @@ InputBox::ok=&Okay
 1504=Change Timeout
 1505=Enter a Name
 1506=Invalid.
+1507=Staff Only Items
